# aiwaf

./: pyproject.toml  setup.py
aiwaf/: __init__.py  rust_backend.py  trainer.py
tests/: test_packaging_rust_optional.py  test_rust_backend_chunked_api.py
