[project]
name = "aiwaf"
version = "0.1.9.6.2"
description = "AI-powered Web Application Firewall"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Aayush Gauba", email = "gauba.aayush@gmail.com" }]
dependencies = [
    "Django>=3.2",
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0,<2.0",
    "joblib>=1.1",
    "geoip2>=4.0",
    "packaging>=21.0",
    "requests>=2.25.0",
    "python-whois>=0.9.0"
]

[project.optional-dependencies]
learning = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0,<2.0",
    "joblib>=1.1"
]
geoblock = [
    "geoip2>=4.0"
]
rust = [
    "aiwaf-rust>=0.1.1"
]
light = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiwaf*"]
